--- a/app/views/admin/editionable_social_media_accounts/new.erb
+++ b/app/views/admin/editionable_social_media_accounts/new.erb
@@ -3,6 +3,8 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= render("form", edition: @edition, social_media_account: SocialMediaAccount.new, destination: admin_edition_social_media_accounts_path(@edition)) %>
+    <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @social_media_account)) %>
+
+    <%= render("form", edition: @edition, social_media_account: @social_media_account, destination: admin_edition_social_media_accounts_path(@edition)) %>
   </div>
 </div>
