Import the visual editor JS and CSS
Include the visual editor JS (537 KB) when visual editor feature flag is enabled due to its large size.
Usage of the visual editor JS will follow.

--- a/app/views/components/_govspeak_editor.html.erb
+++ b/app/views/components/_govspeak_editor.html.erb
@@ -100,4 +100,6 @@
   <%= tag.div class: "app-c-govspeak-editor__error js-locale-switcher-custom", 'aria-live': "polite", id: error_id, dir: dir do %>
     <p class="govuk-error-message" dir="ltr">There is an error in your Markdown. Select Back to edit and review your markdown.</p>
   <% end %>
+
+  <%= javascript_include_tag "components/govspeak-visual-editor", :type => "module" if show_visual_editor %>
 <% end %>
