--- a/app/views/admin/editionable_worldwide_organisations/_form.html.erb
+++ b/app/views/admin/editionable_worldwide_organisations/_form.html.erb
@@ -23,4 +23,6 @@
       <%= render "organisation_fields", form: form, edition: edition, required: true %>
     </div>
   <% end %>
+
+  <%= render "admin/editionable_worldwide_organisations/pages", form: form %>
 <% end %>
