--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@ $govuk-page-width: 1140px;
 @import "./components/single-image-upload";
 @import "./components/sub-navigation";
 @import "./components/summary-card";
+@import "./components/visual-editor";
 
 @import "./admin/overrides";
 
