Remove "supporting organisations" for Worldwide Organisations
Editionable Worldwide Organisations don't need "supporting
organisations", as they only have a short ordered list of sponsoring
organisations.

We need to use "lead organisations", instead of "supporting
organisations", since lead organisations can be ordered whereas
supporting organisations appear in the order the organisation was first
added to Whitehall.

Therefore allowing models (in a generic way) to not have supporting
organisations.

The tests have been copied from the existing
`should_allow_lead_and_supporting_organisations_for` method, with
adaptation to ensure only lead organisations can be added.

--- a/app/views/admin/editions/_organisation_fields.html.erb
+++ b/app/views/admin/editions/_organisation_fields.html.erb
@@ -34,18 +34,20 @@
       <% end %>
     </div>
 
-    <%= render "components/autocomplete", {
-      id: "edition_supporting_organisation_ids",
-      name: "edition[supporting_organisation_ids][]",
-      label: {
-        text: "Supporting organisations",
-        heading_size: "m",
-      },
-      select: {
-        multiple: true,
-        selected: edition.edition_organisations.reject(&:lead?).map(&:organisation_id),
-        options: [""] + taggable_organisations_container,
-      },
-    } %>
+    <% if edition.can_have_supporting_organisations? %>
+      <%= render "components/autocomplete", {
+        id: "edition_supporting_organisation_ids",
+        name: "edition[supporting_organisation_ids][]",
+        label: {
+          text: "Supporting organisations",
+          heading_size: "m",
+        },
+        select: {
+          multiple: true,
+          selected: edition.edition_organisations.reject(&:lead?).map(&:organisation_id),
+          options: [""] + taggable_organisations_container,
+        },
+      } %>
+    <% end %>
   <% end %>
 <% end %>
