--- a/app/views/admin/social_media_accounts/index.html.erb
+++ b/app/views/admin/social_media_accounts/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: [:admin, @socialable.class],
+    href: admin_worldwide_organisations_path,
   } %>
 <% end %>
 <% content_for :page_title, @socialable.name %>
