Associate case studies with editionable worldwide organisations
Allows users to select an editionable worldwide organisation when creating or
updating a world news story.

As editionable worldwide organisations are set to replace worldwide
organisations, this is behind a feature flag ready for the eventual switch.

--- a/app/views/admin/case_studies/_form.html.erb
+++ b/app/views/admin/case_studies/_form.html.erb
@@ -10,7 +10,12 @@
     id: "associations",
   } do %>
     <div class="govuk-!-margin-bottom-4">
-      <%= render "worldwide_organisation_fields", form: form, edition: edition %>
+      <% if Flipflop.editionable_worldwide_organisations? %>
+        <%= render "editionable_worldwide_organisation_fields", form: form, edition: edition %>
+      <% else %>
+        <%= render "worldwide_organisation_fields", form: form, edition: edition %>
+      <% end %>
+
       <%= render "world_location_fields", form: form, edition: edition %>
       <%= render "organisation_fields", form: form, edition: edition %>
     </div>
