Re-render worldwide organisation page type when invalid
We want the previously selected page type to persist when the form is
re-rendered after an invalid submission.

--- a/app/views/admin/worldwide_organisation_pages/_form.html.erb
+++ b/app/views/admin/worldwide_organisation_pages/_form.html.erb
@@ -15,6 +15,7 @@
         {
           text: type,
           value: value,
+          selected: form.object.corporate_information_page_type_id == value,
         }
       end,
     } %>
