Add attachments functionality to worldwide organisation page
As worldwide organisation pages are replacing corporate information pages for
editionable worldwide organisations they must be able to have associated
attachments.

Note: Attachments can't be uploaded on the `new` form. This is consistent with
the other models of Whitehall such as corporate information pages and policy
groups.

Note 2: The attachments URL path isn't appended to the full worldwide
organisation pages path. Again, this is consistent with corporate information
pages. We might want to consider making some of the editionable worldwide
organisation paths shallow as a further refinement.

--- a/app/views/admin/worldwide_organisation_pages/edit.html.erb
+++ b/app/views/admin/worldwide_organisation_pages/edit.html.erb
@@ -5,6 +5,11 @@
     <% content_for :context, @worldwide_organisation.title %>
     <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @worldwide_organisation_page)) %>
 
+    <%= render "components/secondary_navigation", {
+      aria_label: "Worldwide organisation page navigation",
+      items: secondary_navigation_tabs_items(@worldwide_organisation_page, request.path),
+    } %>
+
     <%= render partial: "form", locals: {worldwide_organisation_page: @worldwide_organisation_page} %>
   </div>
 
