Rework worldwide page summary component for translations
We want the worldwide page summary component to handle translations as well as
ordinary worldwide organsation pages.

--- a/app/components/admin/worldwide_organisation_pages/index/summary_card_component.html.erb
+++ b/app/components/admin/worldwide_organisation_pages/index/summary_card_component.html.erb
@@ -1,6 +1,6 @@
 <div class="app-vc-worldwide-pages-index-page-summary-card-component">
   <%= render "components/summary_card", {
-    title: page.title,
+    title: title,
     rows: rows,
     summary_card_actions: summary_card_actions,
   } %>
