Use more generic republishing language
We'll soon be able to republish organisations, people, and roles, so
this makes the language more generic ('document' -> 'content') to cover
all bases. 'document type' was already a little inaccurate, since we're
initially focusing on individual content, not content by type

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for :page_title, "Republish documents" %>
-<% content_for :title, "Republish documents" %>
+<% content_for :page_title, "Republish content" %>
+<% content_for :title, "Republish content" %>
 <% content_for :title_margin_bottom, 6 %>
 
 <div class="govuk-grid-row">
@@ -15,7 +15,7 @@
     <p class="govuk-body">
       The following actions will allow you to schedule the republishing of content that was originally published in this application.
       Any linked editions will also be republished through dependency resolution.
-      Try to pick the document type most focused to the scope of what you need to republish to avoid unnecessary server load.
+      Try to pick the republishing task most focused to the scope of what you need to republish to avoid unnecessary server load.
     </p>
 
     <%= render "govuk_publishing_components/components/table", {
