--- a/app/views/admin/republishing/confirm_page.html.erb
+++ b/app/views/admin/republishing/confirm_page.html.erb
@@ -1,5 +1,5 @@
-<% content_for :page_title, "Republish '#{@document_title}'" %>
-<% content_for :title, "Are you sure you want to republish '#{@document_title}'?" %>
+<% content_for :page_title, "Republish '#{@title}'" %>
+<% content_for :title, "Are you sure you want to republish '#{@title}'?" %>
 <% content_for :title_margin_bottom, 6 %>
 
 <div class="govuk-grid-row">
