Fix republishing link ID
We shifted to using a `.map` here but left in a page-specific ID: this
makes it generic/specific to whichever item is within a given `.map`
iteration

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -35,7 +35,7 @@
         {
           text: link_to(sanitize("Republish #{tag.span('\'' + page[:title] + '\' page', class: 'govuk-visually-hidden')}"),
               admin_confirm_page_republishing_path(page[:slug]),
-              id: "republish-past-prime-ministers-index",
+              id: "republish-" + page[:slug],
               class: "govuk-link",
             ),
         },
