--- a/app/views/admin/republishing/find_organisation.html.erb
+++ b/app/views/admin/republishing/find_organisation.html.erb
@@ -4,7 +4,7 @@
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
-    <%= form_with(url: '#', method: :post, data: {
+    <%= form_with(url: admin_republishing_organisation_search_path, method: :post, data: {
         module: "prevent-multiple-form-submissions",
       }) do %>
 
