--- a/app/views/admin/republishing/confirm_organisation.html.erb
+++ b/app/views/admin/republishing/confirm_organisation.html.erb
@@ -7,7 +7,7 @@
     <p class="govuk-body govuk-!-margin-bottom-7">
       This will schedule the <%= link_to @organisation.name, @organisation.public_url, { class: "govuk-link" } %> organisation to be republished.
     </p>
-    <%= form_with(url: "#", method: :post, data: {
+    <%= form_with(url: admin_republishing_organisation_republish_path(@organisation.slug), method: :post, data: {
         module: "prevent-multiple-form-submissions",
       }) do
         render("govuk_publishing_components/components/button", {
