Add audit history for worldwide organisation pages
Worldwide organisation pages are intended to replace corporate information
pages for the new editionable worldwide organisation model.

Whereas corporate information pages are editionable, worldwide organisation
pages are not, and are more similar to worldwide offices.

The upside of this is that they can be published in sync with the editionable
worldwide organisation. One of the downsides is that they won't have their own
audit history.

In order to address this, this adds the pages to the audit history of the
editionable worldwide organisation.

Currently, this simply add conditions to the existing `diff` view. If in future
we want more models to display the audit history of their associated models, we
may want to add the `diff` route to the models themselves and make this more
polymorphic.

--- a/app/views/admin/editions/diff.html.erb
+++ b/app/views/admin/editions/diff.html.erb
@@ -11,7 +11,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <p class="govuk-body">This page shows changes to the title, summary and body in this edition. It does not show changes to attachments or associations.</p>
+    <% if @edition.is_a?(EditionableWorldwideOrganisation) %>
+      <p class="govuk-body">This page shows changes to the title, summary, body, and pages in this edition. It does not show changes to attachments.</p>
+    <% else %>
+      <p class="govuk-body">This page shows changes to the title, summary and body in this edition. It does not show changes to attachments or associations.</p>
+    <% end %>
 
     <div class="govuk-!-margin-bottom-5">
       <%= render "govuk_publishing_components/components/heading", {
@@ -45,5 +49,9 @@
         <%= diff_html(@audit_trail_entry.body, @edition.body) %>
       </div>
     </div>
+
+    <% if @edition.is_a?(EditionableWorldwideOrganisation) %>
+      <%= render "admin/editionable_worldwide_organisations/pages_diff" %>
+    <% end %>
   </div>
 </div>
