Enable user permission for using visual editor for editions
We want to release a private-beta version of a new feature, the visual editor.
Whilst the feature flag is already in place, we only want to share the feature
with a select group of users, therefore restricting it further with a permission.

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -64,7 +64,7 @@
   </div>
 
   <div class="govuk-!-margin-bottom-8 js-locale-switcher-field">
-    <% if Flipflop.govspeak_visual_editor? %>
+    <% if Flipflop.govspeak_visual_editor? && current_user.can_see_visual_editor_private_beta? %>
       <%= render "components/visual_editor", {
         label: {
           text: "Body" + "#{' (required)' if form.object.body_required?}",
