Add people to republishing tasks index
This adds the task to republish a person by slug to the index of
republishing tasks. This is not yet linked up to the next page

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -90,6 +90,18 @@
               ),
           },
         ],
+        [
+          {
+            text: "Person",
+          },
+          {
+            text: link_to(sanitize("Republish #{tag.span('a person', class: 'govuk-visually-hidden')}"),
+                "#",
+                id: "republish-person",
+                class: "govuk-link",
+              ),
+          },
+        ],
       ],
     } %>
   </section>
