Add page for finding a person to republish
This is not yet hooked up with a search action so the form doesn't do
anything in this commit

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -96,7 +96,7 @@
           },
           {
             text: link_to(sanitize("Republish #{tag.span('a person', class: 'govuk-visually-hidden')}"),
-                "#",
+                admin_republishing_person_find_path,
                 id: "republish-person",
                 class: "govuk-link",
               ),
