--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -102,6 +102,18 @@
               ),
           },
         ],
+        [
+          {
+            text: "Role",
+          },
+          {
+            text: link_to(sanitize("Republish #{tag.span('a role', class: 'govuk-visually-hidden')}"),
+                "#",
+                id: "republish-role",
+                class: "govuk-link",
+              ),
+          },
+        ],
       ],
     } %>
   </section>
