Add page for finding a role to republish
This is not yet hooked up with a search action so the form doesn't do
anything in this commit

The layout of this page is slightly different to the organisation by
slug and person by slug pages, since the guidance for finding a slug is
more complicated. A details component has been used to keep the hint
text minimal

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -108,7 +108,7 @@
           },
           {
             text: link_to(sanitize("Republish #{tag.span('a role', class: 'govuk-visually-hidden')}"),
-                "#",
+                admin_republishing_role_find_path,
                 id: "republish-role",
                 class: "govuk-link",
               ),
