Add documents to republishing tasks index
This adds the task to republish a document by slug to the index of
republishing tasks. This is not yet linked up to the next page

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -114,6 +114,18 @@
               ),
           },
         ],
+        [
+          {
+            text: "Document",
+          },
+          {
+            text: link_to(sanitize("Republish #{tag.span('a document', class: 'govuk-visually-hidden')}"),
+                "#",
+                id: "republish-document",
+                class: "govuk-link",
+              ),
+          },
+        ],
       ],
     } %>
   </section>
