Add page for finding a document to republish
This is not yet hooked up with a search action so the form doesn't do
anything in this commit

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -120,7 +120,7 @@
           },
           {
             text: link_to(sanitize("Republish #{tag.span('a document', class: 'govuk-visually-hidden')}"),
-                "#",
+                admin_republishing_document_find_path,
                 id: "republish-document",
                 class: "govuk-link",
               ),
