Search for a document to republish
The search will currently redirect to the main admin page when the
document is found. This will be updated to the confirmation page once
added

--- a/app/views/admin/republishing/find_document.html.erb
+++ b/app/views/admin/republishing/find_document.html.erb
@@ -4,7 +4,7 @@
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
-    <%= form_with(url: "#", method: :post, data: {
+    <%= form_with(url: admin_republishing_document_search_path, method: :post, data: {
         module: "prevent-multiple-form-submissions",
       }) do %>
       <%= render "govuk_publishing_components/components/input", {
