Fix validation error for edition body when using visual editor
Wrapped the entire editor view in error class when any textarea errors are present.
Pass id to textarea in visual editor view so that the error link in the error summary
can link to & focus on the textarea (if user has permissions but js is disabled).
When the visual editor is rendered (permissions on and js enabled), the id is removed
from the textarea and applied to the contenteditable.

Co-authored-by: Alex Newton <alex.newton@digital.cabinet-office.gov.uk>
Co-authored-by: Daniel Karaj <daniel.karaj@digital.cabinet-office.gov.uk>

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -74,6 +74,7 @@
         value: edition.body,
         error_items: errors_for(edition.errors, :body),
         right_to_left: form.object.translation_rtl?,
+        id: "edition_body",
       } %>
     <% else %>
       <%= render "components/govspeak_editor", {
