Fix validation errors for HTML attachments when using visual editor
Pass id to textarea in visual editor view so that the error link in the error summary
can link to & focus on the textarea (if user has permissions but js is disabled).
When the visual editor is rendered (permissions on and js enabled), the id is removed
from the textarea and applied to the contenteditable.

Co-authored-by: Daniel Karaj <daniel.karaj@digital.cabinet-office.gov.uk>

--- a/app/views/admin/attachments/_form.html.erb
+++ b/app/views/admin/attachments/_form.html.erb
@@ -52,6 +52,7 @@
             value: form.object.govspeak_content.body,
             error_items: errors_for(attachment.errors, :"govspeak_content.body"),
             right_to_left:  form.object.rtl_locale?,
+            id: "attachment_govspeak_content_body",
           } %>
         <% else %>
         <%= render "components/govspeak_editor", {
