--- a/app/views/admin/attachments/_form.html.erb
+++ b/app/views/admin/attachments/_form.html.erb
@@ -49,10 +49,16 @@
               heading_size: "l",
             },
             name: "attachment[govspeak_content_attributes][body]",
+            rows: 20,
+            id: "attachment_govspeak_content_body",
             value: form.object.govspeak_content.body,
             error_items: errors_for(attachment.errors, :"govspeak_content.body"),
             right_to_left:  form.object.rtl_locale?,
-            id: "attachment_govspeak_content_body",
+            data_attributes: {
+              image_ids: @edition && @edition.images.any? ? @edition.images.map { |img| img[:id] } : [],
+              attachment_ids: [], # HTML attachments cannot embed Attachments from their parent Edition
+            },
+            hidden_field_name: nil,
           } %>
         <% else %>
         <%= render "components/govspeak_editor", {
