--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -64,17 +64,24 @@
   </div>
 
   <div class="govuk-!-margin-bottom-8 js-locale-switcher-field">
-    <% if Flipflop.govspeak_visual_editor? && current_user.can_see_visual_editor_private_beta? %>
+    <% if Flipflop.govspeak_visual_editor? && current_user.can_see_visual_editor_private_beta? && form.object.visual_editor %>
       <%= render "components/visual_editor", {
         label: {
           text: "Body" + "#{' (required)' if form.object.body_required?}",
           heading_size: "m",
         },
         name: "edition[body]",
+        id: "edition_body",
         value: edition.body,
+        rows: 20,
         error_items: errors_for(edition.errors, :body),
         right_to_left: form.object.translation_rtl?,
-        id: "edition_body",
+        data_attributes: {
+          image_ids: edition.images.map { |img| img[:id] }.to_json,
+          attachment_ids: edition.allows_inline_attachments? ? edition.attachments.map(&:id) : [],
+          alternative_format_provider_id: (edition.alternative_format_provider_id || current_user.organisation.try(:id)),
+        },
+        hidden_field_name: "edition[visual_editor]",
       } %>
     <% else %>
       <%= render "components/govspeak_editor", {
@@ -94,6 +101,7 @@
           alternative_format_provider_id: (edition.alternative_format_provider_id || current_user.organisation.try(:id)),
         },
       } %>
+      <%= hidden_field_tag "edition[visual_editor]", false %>
     <% end %>
   </div>
 
