Tidy up republishing messaging
- Clarify which republishing tasks are scheduled vs performed
  immediately (between page loads)
- Make structure of messages more consistent

--- a/app/views/admin/republishing/confirm_document.html.erb
+++ b/app/views/admin/republishing/confirm_document.html.erb
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
     <p class="govuk-body govuk-!-margin-bottom-7">
-      This will schedule the following editions to be republished.
+      This will republish the following editions.
     </p>
 
     <%= render "govuk_publishing_components/components/table", {
