--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -20,7 +20,7 @@
         </p>
 
         <p class="govuk-body">
-          The following actions will allow you to schedule the republishing of content that was originally published in this application.
+          The following actions will allow you to republish content that was originally published in this application.
           Any linked editions will also be republished through dependency resolution.
           Try to pick the republishing task most focused to the scope of what you need to republish to avoid unnecessary server load.
         </p>
@@ -30,7 +30,7 @@
     <h2>Individual pages</h2>
 
     <p class="govuk-body">
-      You can republish a selection of individual pages using the links below. If the page you wish to republish is not listed below, you may be able to use the 'Document' link in the next section.
+      You can schedule a selection of individual pages for republishing using the links below. If the page you wish to republish is not listed below, you may be able to use the 'Document' link in the next section.
     </p>
 
     <%= render "govuk_publishing_components/components/table", {
