--- a/app/views/admin/republishing/confirm_organisation.html.erb
+++ b/app/views/admin/republishing/confirm_organisation.html.erb
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
     <p class="govuk-body govuk-!-margin-bottom-7">
-      This will schedule the <%= link_to @organisation.name, @organisation.public_url, { class: "govuk-link" } %> organisation to be republished.
+      This will republish the organisation <%= link_to @organisation.name, @organisation.public_url, { class: "govuk-link" } %>.
     </p>
     <%= form_with(url: admin_republishing_organisation_republish_path(@organisation.slug), method: :post, data: {
         module: "prevent-multiple-form-submissions",
