Add "Republish content" to "More" page
This is only visible to users with GDS admin permissions

--- a/app/views/admin/more/index.html.erb
+++ b/app/views/admin/more/index.html.erb
@@ -19,6 +19,7 @@
         admin_topical_events_link,
         admin_world_location_news_link,
         admin_worldwide_organisations_link,
+        admin_republish_content_link,
       ],
     } %>
   </div>
