WIP add warning/confirmation when requeueing recently queued job
Also:
- renaming a partial local
- avoid accessing instance variables directly in partial
- add action to index

TODO:
- make the warning text and checkbox label look better - the multi-line
  styling doesn't look good. Can we split into multiple components?

--- a/app/views/admin/bulk_republishing/confirm_all.html.erb
+++ b/app/views/admin/bulk_republishing/confirm_all.html.erb
@@ -8,6 +8,12 @@
     <p class="govuk-body govuk-!-margin-bottom-7">
       This will schedule <%= @bulk_content_type_string %> to be republished.
     </p>
-    <%= render partial: "shared/republishing_form", locals: { republishing_url: @republishing_path } %>
+
+    <%= render partial: "shared/republishing_form", locals: {
+      republishing_event: @republishing_event,
+      republishing_path: @republishing_path,
+      recently_queued_job_time: @recently_queued_job_time,
+      suggested_requeue_time: @suggested_requeue_time
+    } %>
   </section>
 </div>
