--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -128,5 +128,36 @@
         ],
       ],
     } %>
+
+    <h2>Bulk republishing</h2>
+
+    <p class="govuk-body">
+      You can schedule multiple pieces of content for republishing using the links below. Note that this might take some time to take effect since bulk republishing jobs are added to a low priority queue.
+    </p>
+
+        <%= render "govuk_publishing_components/components/table", {
+      head: [
+        {
+          text: "Content type",
+        },
+        {
+          text: "Action",
+        },
+      ],
+      rows: [
+        [
+          {
+            text: "All about us pages",
+          },
+          {
+            text: link_to(sanitize("Republish #{tag.span('all about us pages', class: 'govuk-visually-hidden')}"),
+                admin_bulk_republishing_all_confirm_path("all_about_us_pages"),
+                id: "bulk-republish-all-about-us-pages",
+                class: "govuk-link",
+              ),
+          },
+        ],
+      ],
+    } %>
   </section>
 </div>
