--- a/app/views/admin/republishing/confirm_document.html.erb
+++ b/app/views/admin/republishing/confirm_document.html.erb
@@ -30,6 +30,9 @@
           ]
         end,
     } %>
-    <%= render partial: "shared/republishing_form", locals: { republishing_url: admin_republishing_document_republish_path(@document.slug) } %>
+    <%= render partial: "shared/republishing_form", locals: {
+      republishing_event: @republishing_event,
+      republishing_path: admin_republishing_document_republish_path(@document.slug)
+    } %>
   </section>
 </div>
