WIP flesh out republishing action

--- a/app/views/shared/_republishing_form.html.erb
+++ b/app/views/shared/_republishing_form.html.erb
@@ -18,7 +18,7 @@
       } %>
 
       <%= render("govuk_publishing_components/components/checkboxes", {
-        name: "confirm_repeat_job",
+        name: "confirm_requeue",
         items: [
           {
             label: "I confirm that I wish to requeue this recently queued job",
