WIP link to docs/queue monitoring?

--- a/app/views/admin/republishing/index.html.erb
+++ b/app/views/admin/republishing/index.html.erb
@@ -130,6 +130,8 @@
     } %>
 
     <h2>Bulk republishing</h2>
+    
+    <%# should we link to Grafana/the Sidekiq web interface/the docs here, so folks have a way of checking the status of queued jobs if they want? https://docs.publishing.service.gov.uk/manual/sidekiq.html#monitoring %>
 
     <p class="govuk-body">
       You can schedule multiple pieces of content for republishing using the links below. Note that this might take some time to take effect since bulk republishing jobs are added to a low priority queue.
