Pre-select the current value for 'world location type'
Prior to this commit, the selected value would always default to
"World location", which meant it was easy to accidentally change
the world location type when making an edit to a "international
delegation".

Trello: https://trello.com/c/GvXvAOvV/2655-fix-world-location-news-type-default-bug

--- a/app/views/admin/world_location_news/edit.html.erb
+++ b/app/views/admin/world_location_news/edit.html.erb
@@ -22,7 +22,13 @@
             name: "world_location_news[world_location_attributes][world_location_type]",
             label: "Type (required)",
             heading_size: "l",
-            options: WorldLocation.world_location_types.keys.map { |location_type| { text: I18n.t("world_location.type.#{location_type}", count: 1), value: location_type } },
+            options: WorldLocation.world_location_types.keys.map do |location_type|
+              {
+                text: I18n.t("world_location.type.#{location_type}", count: 1),
+                value: location_type,
+                selected: location_type == @world_location_news.world_location.world_location_type,
+              }
+            end,
             full_width: true,
           } %>
 
