--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -21,7 +21,7 @@
 
   <%= render partial: "shared/header" %>
 
-  <div class="govuk-width-container">
+  <div class="govuk-width-container" data-module="ga4-event-tracker">
     <%= render "shared/phase_banner", {
       show_feedback_banner: t("admin.feedback.show_banner"),
     } %>
